<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.opensrp</groupId>
    <artifactId>opensrp</artifactId>
    <packaging>pom</packaging>
    <version>0.1-SNAPSHOT</version>
    <name>opensrp</name>
    <url>http://github.com/OpenSRP/opensrp-server</url>

    <modules>
        <module>openlmis-stock</module>
    </modules>

    <properties>
        <main.basedir>${project.basedir}</main.basedir>
        <motech.version>0.11</motech.version>
        <motech.contrib.group>org.motechproject.contrib-drishti</motech.contrib.group>
        <motech.contrib.version>0.1-SNAPSHOT</motech.contrib.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring.version>3.1.1.RELEASE</spring.version>
        <mysql.connector.version>5.1.36</mysql.connector.version>
        <jackson.version>1.9.7</jackson.version>
        <opensrp.updatePolicy>always</opensrp.updatePolicy>
    </properties>

    <distributionManagement>
        <repository>
            <id>opensrp.nexus</id>
            <name>OpenSRP Releases Repository</name>
            <url>http://ci.smartregistries.org:8081/nexus/content/repositories/releases</url>
            <uniqueVersion>false</uniqueVersion>
        </repository>
        <snapshotRepository>
            <id>opensrp.nexus</id>
            <name>OpenSRP Snapshots Repository</name>
            <url>http://ci.smartregistries.org:8081/nexus/content/repositories/opensrp-server</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

    <pluginRepositories>
        <pluginRepository>
            <id>jasmine-js-bdd</id>
            <name>Jasmine JavaScript BDD Repository</name>
            <url>http://searls-maven-repository.googlecode.com/svn/trunk/snapshots</url>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>central</id>
            <url>http://repo1.maven.org/maven2</url>
            <name>Repository for dependencies</name>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-maven-release</id>
            <name>Spring Maven Release Repository</name>
            <url>http://maven.springframework.org/release</url>
        </repository>
        <repository>
            <id>spring-maven-milestone</id>
            <name>Spring Maven Milestone Repository</name>
            <url>http://maven.springframework.org/milestone</url>
        </repository>
        <repository>
            <id>motech.opensrp</id>
            <name>Motech Snapshots Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/opensrp-server</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>motech.nexus</id>
            <name>Motech Snapshots Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>motech.nexus.release</id>
            <name>Motech Snapshots Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/releases</url>
        </repository>
    </repositories>
    <profiles>
        <profile>
            <id>skip-integration-tests</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.9</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                                <configuration>
                                    <argLine>-XX:MaxPermSize=1024M</argLine>
                                    <excludes>
                                        <exclude>**/it/**</exclude>
                                    </excludes>
                                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>integration-tests</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <build>
                <!-- <pluginManagement> -->
                <!-- </pluginManagement> -->
            </build>
        </profile>
        <profile>
            <id>couchDb</id>
            <activation>
                <property>
                    <name>opensrp.database.type</name>
                    <value>couchdb</value>
                </property>
            </activation>
            <properties>
                <opensrp.database.profile>couchdb</opensrp.database.profile>
            </properties>
        </profile>
        <profile>
            <id>postgres</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>opensrp.database.type</name>
                    <value>postgres</value>
                </property>
            </activation>
            <properties>
                <opensrp.database.profile>postgres</opensrp.database.profile>
            </properties>
        </profile>
    </profiles>
    <build>
        <!-- <pluginManagement> -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <outputDirectory/>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.5</version>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>1.0-alpha-2</version>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>read-project-properties</goal>
                        </goals>
                        <configuration>
                            <files>
                                <file>${main.basedir}/assets/config/openlmis.properties</file>
                            </files>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20</version>
                <configuration>
                    <printSummary>true</printSummary>
                    <excludes>
                        <exclude>**/it/**</exclude>
                    </excludes>

                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.7.9</version>
                <configuration>
                    <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
                    <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
                </configuration>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-site</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>4.0.0</version>
            </plugin>

        </plugins>
        <!-- </pluginManagement> -->
        <pluginManagement>
            <plugins>
            </plugins>
        </pluginManagement>
    </build>
</project>
